[package]
name = "ets"
version = "0.1.0"
authors = ["William Speirs <wspeirs@datto.com>"]

[dependencies]
clap = {version = "2.32"}
log = "0.4"
simplelog = "0.5"
walkdir = "2.2"
sha2 = "0.7"
digest = {version = "0.7", features = ["std"]}
glob = "0.2"
#yaml-rust = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
chrono = "0.4"
