[package]
name = "ets"
version = "0.1.0"
authors = ["William Speirs <bill.speirs@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = {version = "2.32"}
log = "0.4"
simplelog = "0.12"
walkdir = "2.2"
sha2 = "0.10"
digest = {version = "0.10", features = ["std"]}
glob = "0.3"
#yaml-rust = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
serde_json = "1.0"
chrono = "0.4"
